--- a/train-image-model.ipynb
+++ b/train-image-model.ipynb
@@ -115,41 +115,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "### 5. Neural Network Training\n",
-    "\n",
-    "The neural network training involves defining your model (which you've mentioned will be provided), setting up a loss function, an optimizer, and iterating over your dataset to train the model. Assuming your model accepts the input shape correctly and predicts the next frame embedding, here is a simplified training loop:\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "from torch import nn, optim\n",
-    "\n",
-    "# Assuming `model` is your nn.Module for predicting the next frame embedding\n",
-    "model = ...  # Your model definition here\n",
-    "loss_function = nn.MSELoss()\n",
-    "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
-    "\n",
-    "for epoch in range(num_epochs):\n",
-    "    for inputs, targets in data_loader:  # Assuming data_loader is set up for your X, y\n",
-    "        optimizer.zero_grad()\n",
-    "        outputs = model(inputs)\n",
-    "        loss = loss_function(outputs, targets)\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "    \n",
-    "    print(f\"Epoch {epoch+1}, Loss: {loss.item()}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Dataloader:\n",
     "\n",
     " create a custom dataset loader that iterates over all MP4 files in a given directory, loads the videos, processes them into frames, and applies the embedding model to each frame."
@@ -215,7 +180,25 @@
     "dataset = VideoFrameDataset(video_paths, img2vec, fps=8)\n",
     "\n",
     "# Create DataLoader\n",
-    "data_loader = DataLoader(dataset, batch_size=16, shuffle=True, )\n"
+    "data_loader = DataLoader(dataset, batch_size=16, shuffle=True, )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### 5. Neural Network Training\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
    ]
   }
  ],
